--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -5162,6 +5162,53 @@
             </objects>
             <point key="canvasLocation" x="-2733.3333333333335" y="1972.826086956522"/>
         </scene>
+        <!--Sample Table-->
+        <scene sceneID="sDQ-gA-J7H">
+            <objects>
+                <viewController storyboardIdentifier="SampleTableCellTableViewCellId" id="Avr-1c-kuV" customClass="SampleTable" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wiS-HV-zWb"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ifc-u6-Mg3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Tft-5t-QnM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wZm-mT-vt3">
+                                <rect key="frame" x="0.0" y="40" width="375" height="260"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Avr-1c-kuV" id="LVN-sJ-Aay"/>
+                                    <outlet property="delegate" destination="Avr-1c-kuV" id="ykt-7C-ynu"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Close" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6uP-zR-2bI">
+                                <rect key="frame" x="305" y="11" width="61" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="1" green="0.3063992284" blue="0.96906850730000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.3063992284" blue="0.96906850730000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wZm-mT-vt3" secondAttribute="trailing" id="5Ah-CS-Lkg"/>
+                            <constraint firstItem="wZm-mT-vt3" firstAttribute="top" secondItem="wiS-HV-zWb" secondAttribute="bottom" constant="40" id="YOK-2z-usL"/>
+                            <constraint firstItem="wZm-mT-vt3" firstAttribute="leading" secondItem="Tft-5t-QnM" secondAttribute="leading" id="c8D-SU-pIh"/>
+                            <constraint firstItem="wZm-mT-vt3" firstAttribute="bottom" secondItem="Ifc-u6-Mg3" secondAttribute="top" id="j8X-HN-HgJ"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="300"/>
+                    <connections>
+                        <outlet property="tableview1" destination="wZm-mT-vt3" id="u9r-c7-vhg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OHE-GB-7Dx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3534" y="1076"/>
+        </scene>
         <!--Multple Ticket Assign Table View Controller-->
         <scene sceneID="QRO-1P-oir">
             <objects>
@@ -6131,9 +6178,9 @@
                                                     <rect key="frame" x="20" y="0.0" width="374" height="55"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add cc" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VtS-aO-RXa">
-                                                            <rect key="frame" x="8" y="8" width="226" height="25"/>
+                                                            <rect key="frame" x="8" y="7" width="226" height="30"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="226" id="C9g-PQ-sdF"/>
+                                                                <constraint firstAttribute="width" constant="226" id="eSb-UN-9wf"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="15"/>
                                                             <color key="textColor" red="0.97905264250000001" green="0.77521144320000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -6151,10 +6198,10 @@
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="y6I-NQ-s3z" firstAttribute="leading" secondItem="b9c-kX-96l" secondAttribute="leading" constant="8" id="3IO-P5-m64"/>
-                                                        <constraint firstItem="VtS-aO-RXa" firstAttribute="top" secondItem="b9c-kX-96l" secondAttribute="topMargin" id="Zwa-1W-s4N"/>
-                                                        <constraint firstItem="VtS-aO-RXa" firstAttribute="leading" secondItem="y6I-NQ-s3z" secondAttribute="leading" id="a6h-8o-Lle"/>
+                                                        <constraint firstItem="VtS-aO-RXa" firstAttribute="leading" secondItem="y6I-NQ-s3z" secondAttribute="leading" id="Aw6-X4-MKL"/>
+                                                        <constraint firstItem="y6I-NQ-s3z" firstAttribute="top" secondItem="VtS-aO-RXa" secondAttribute="bottom" constant="17" id="RnI-I0-rb7"/>
+                                                        <constraint firstItem="VtS-aO-RXa" firstAttribute="top" secondItem="b9c-kX-96l" secondAttribute="top" constant="7" id="d0B-mR-gAL"/>
                                                         <constraint firstAttribute="trailing" secondItem="y6I-NQ-s3z" secondAttribute="trailing" constant="8" id="gVb-NH-n9c"/>
-                                                        <constraint firstItem="y6I-NQ-s3z" firstAttribute="top" secondItem="VtS-aO-RXa" secondAttribute="bottom" constant="21" id="paR-7s-XPu"/>
                                                         <constraint firstAttribute="bottom" secondItem="y6I-NQ-s3z" secondAttribute="bottom" id="z2X-iM-1zl"/>
                                                     </constraints>
                                                 </view>
@@ -6272,7 +6319,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OyV-sj-WDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2020" y="-482"/>
+            <point key="canvasLocation" x="-2020.289855072464" y="-482.60869565217394"/>
         </scene>
         <!--Internal Note View Controller-->
         <scene sceneID="C7w-a0-buz">
